# lettershark

./: .gitignore  CMakeLists.txt  contextmenuhandler.cpp  contextmenuhandler.h  customdialog.cpp  customdialog.h  filemanager.cpp  filemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowuisetup.cpp  mainwindowuisetup.h  parser.cpp  parser.h  parser_exceptions.h  ramwatcher.cpp  ramwatcher.h  resources.qrc  searchcontroller.cpp  searchcontroller.h  tabfactory.cpp  tabfactory.h  titlebar.cpp  titlebar.h  windowdragger.cpp  windowdragger.h  zipextractor.cpp  zipextractor.h
src/styles/: dark_mainwindow.qss
